# math-anim

./: README.md  main.py  manim.cfg  pyproject.toml
anim/: gradient.py
docs/: exercises.py  gardient_and_lagrange_multiplier_scene.md  tutorial.py
media/videos/gradient/480p15/partial_movie_files/Hello/: partial_movie_file_list.txt
scenes/: base.py  demo_normal.py  demo_short.py  ee_proposals_scenes.py  gradient_and_lagrange_multiplier.py  hello.py  theme.py
shared/: __init__.py  short_constants.py
