[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math-anim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["manim>=0.20.1", "numpy>=2.4.4"]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.poe.tasks]
scene = "manim -p"
low = "manim -p -ql"
high = "manim -p -qh"
last-frame = "manim -ps"
render = "manim -qh --write_to_movie"

[dependency-groups]
dev = ["poethepoet>=0.44.0"]

[tool.ruff]
# Add F403 (star imports) and F405 (usage of star imports) to ignore
ignore = ["F403", "F405"]
